--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.2"
+  compileSdkVersion 27
+  buildToolsVersion "27.0.1"
 
   defaultConfig {
-    minSdkVersion 9
-    targetSdkVersion 25
+    minSdkVersion 14
+    targetSdkVersion 27
     versionCode 1
     versionName "1.0"
 
@@ -29,8 +29,8 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:appcompat-v7:25.1.0'
-  compile 'com.squareup.okhttp:okhttp:2.7.4'
-  compile 'commons-io:commons-io:2.4'
+  compile 'com.android.support:appcompat-v7:27.0.1'
+  compile 'com.squareup.okhttp3:okhttp:3.9.1'
+  compile 'commons-io:commons-io:2.5'
   compile project(':library')
 }
