Prepare for release v2.2.0

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,11 @@ allprojects {
     google()
   }
 }
+
+if (JavaVersion.current().isJava8Compatible()) {
+  allprojects {
+    tasks.withType(Javadoc) {
+      options.addStringOption('Xdoclint:none', '-quiet')
+    }
+  }
+}
