--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:appcompat-v7:27.0.1'
-  compile 'com.squareup.okhttp3:okhttp:3.9.1'
-  compile 'commons-io:commons-io:2.5'
-  compile project(':library')
+  implementation 'com.android.support:appcompat-v7:27.0.1'
+  implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+  implementation 'commons-io:commons-io:2.5'
+  api project(':library')
 }
