--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,4 @@ POM_LICENCE_URL=https://github.com/felipecsl/GifImageView/blob/master/LICENSE
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=felipecsl
 POM_DEVELOPER_NAME=Felipe Lima
+org.gradle.configureondemand=false
