--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,8 @@
 
         <activity
             android:name=".GridViewActivity"
-            android:label="@string/grid_example" >
+            android:label="@string/grid_example"
+            android:exported="true">
         </activity>
     </application>
 
