--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,12 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=felipecsl
 POM_DEVELOPER_NAME=Felipe Lima
 org.gradle.configureondemand=false
+
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app"s APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
+android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
