--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = "1.6.10"
+    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = "1.6.10"
   repositories {
     mavenCentral()
     google()
