--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = "1.6.10"
   repositories {
-    jcenter()
+    mavenCentral()
     google()
+    maven { url 'https://jitpack.io' }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.2'
+    classpath 'com.android.tools.build:gradle:7.2.2'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
   }
 }
 
 allprojects {
   repositories {
-    jcenter()
+    mavenCentral()
     google()
+    maven { url 'https://jitpack.io' }
+
   }
 }
+
 
 if (JavaVersion.current().isJava8Compatible()) {
   allprojects {
